update the return for onclick event

--- a/MESAeveryday/templates/account_deactivate.html
+++ b/MESAeveryday/templates/account_deactivate.html
@@ -60,7 +60,7 @@ button
                 First Name:	<input type=text size=30 name=FirstName><br>
                 Last Name: <input type=text size=30 name=LastName><br>
 
-				<button type="submit" id="mysubmit" class='btn btn-default' onclick="confirmSubmit()" disable>Deactivate</button>
+				<button type="submit" id="mysubmit" class='btn btn-default' onclick=" return confirmSubmit()" disable>Deactivate</button>
 			</form>
 		<p id=result></p>
 		</div>
