--- a/MESAeveryday/templates/landpage.html
+++ b/MESAeveryday/templates/landpage.html
@@ -6,7 +6,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">MESA</a>
+      <a class="navbar-brand" href="#"><img src="../static/img/mesa.png" class="" style="width: 150px; height: 75px;"></a>
       <form name="form_l" class="form-inline" method="POST" action="{{ url_for('login') }}">
         <div class="form">
             <!-- Username -->
