--- a/MESAeveryday/templates/reset_token.html
+++ b/MESAeveryday/templates/reset_token.html
@@ -7,8 +7,10 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">MESA</a>
-      
+      <a class="navbar-brand" href="#"><img src="../static/img/mesa.png" class="" style="width: 150px; height: 75px;"></a>
+      <form action="../landpage" method="get">
+          <input type="submit" value="Login" class="btn btn-outline-info" />
+      </form>
     </div>
   </nav>
 
