--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -161,8 +161,10 @@
                                 <!--Grid column-->
                                 <div class="col-lg-4 mb-4">
                                     <!--Featured image-->
-                                    <div class="view overlay z-depth-1">
-                                        <img class="rounded-circle account-img" src="../static/badge_icons/{{ picture_file }}" class="img-fluid">
+                                    <div>
+                                        <div style="align-items: center;justify-content: center;display: flex;height: 10em">
+                                        <img class="rounded-circle account-img" src="../static/badge_icons/{{ picture_file }}">
+                                        </div>
                                         <a>
                                             <div class="mask rgba-white-slight"></div>
                                         </a>
