--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -63,17 +63,19 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect" href="#" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user"></i> <span class="clearfix d-none d-sm-inline-block">{{ session['myusername']  }} </span></a>
+                        <i class="fa fa-user"></i> <span class="clearfix d-none d-sm-inline-block">{{ current_user.username }} </span></a>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <div class="navbar-login">
                             <div class="row">
-                                <div class="col-lg-4">
-                                    <img src="static/avatar/{{ current_user.avatar.file_name }}" class="img-fluid" alt="First sample image">
+                                <div class="col-lg-12">
+                                    <img src="static/avatar/{{ current_user.avatar.file_name }}" class="rounded-circle account-img" alt="First sample image">
                                 </div>
-                                <div class="col-lg-8">
-                                    <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
-                                    <a class="dropdown-item" href="{{ url_for('account') }}">Edit Profile</a>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <a class="dropdown-item text-center" href="{{ url_for('account') }}">Edit Profile</a>
+                                    <a class="dropdown-item text-center" href="{{ url_for('logout') }}">Log Out</a>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +166,7 @@
                         </div>
                     </div>   
 
-                    <!--Panel-->
+                    <!--Main part that different-->
                     <div class="card mb-4">
                         <div class="card-header white-text primary-color">
                             Badge Information
@@ -184,19 +186,26 @@
                                         <div class="data">
                                             {% for r, p in points %}
                                             {% if r == 'College Knowledge' %}
-                                            <p>{{ r }}</p>
-                                            <h4 class="font-weight-bold dark-grey-text">{{ p }}</h4>
+                                            <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
+                                            <p>{{ p }}</p>
                                         </div>
                                     </div>
                                     <!--/.Card Data-->
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress">
-                                            <div class="progress-bar bg-primary" role="progressbar" style="width: {{ p }}%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress" style="height:20px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
                                         <!--Text-->
-                                        <p class="card-text">Need {{ 100 - p }} Stamps</p>
+                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
+                                        <div class="progress-circle p{{ p }}">
+                                           <span>{{ p }}%</span>
+                                           <div class="left-half-clipper">
+                                              <div class="first50-bar"></div>
+                                              <div class="value-bar"></div>
+                                           </div>
+                                        </div>
                                         <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
@@ -217,19 +226,26 @@
                                         <img class="rounded-circle account-img" src="../static/badge_icons/Career_Pro.png">
                                         <div class="data">
                                             {% elif r == 'Career Pro' %}
-                                            <p>{{ r }}</p>
-                                            <h4 class="font-weight-bold dark-grey-text">{{ p }}</h4>
+                                            <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
+                                            <p>{{ p }}</p>
                                         </div>
                                     </div>
                                     <!--/.Card Data-->
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress">
-                                            <div class="progress-bar red accent-2" role="progressbar" style="width: {{ p }}%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress" style="height:20px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
                                         <!--Text-->
-                                        <p class="card-text">Need {{ 100 - p }} Stamps</p>
+                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
+                                        <div class="progress-circle p{{ p }}">
+                                           <span>{{ p }}%</span>
+                                           <div class="left-half-clipper">
+                                              <div class="first50-bar"></div>
+                                              <div class="value-bar"></div>
+                                           </div>
+                                        </div>
                                         <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
@@ -251,19 +267,26 @@
                                         <img class="rounded-circle account-img" src="../static/badge_icons/Professional_Development.png">
                                         <div class="data">
                                             {% elif r == 'Professional Development' %}
-                                            <p>{{ r }}</p>
-                                            <h4 class="font-weight-bold dark-grey-text">{{ p }}</h4>
+                                            <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
+                                            <p>{{ p }}</p>
                                         </div>
                                     </div>
                                     <!--/.Card Data-->
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress">
-                                            <div class="progress-bar red accent-2" role="progressbar" style="width: {{ p }}%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress" style="height:20px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
                                         <!--Text-->
-                                        <p class="card-text">Need {{ 100 - p }} Stamps</p>
+                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
+                                        <div class="progress-circle p{{ p }}">
+                                           <span>{{ p }}%</span>
+                                           <div class="left-half-clipper">
+                                              <div class="first50-bar"></div>
+                                              <div class="value-bar"></div>
+                                           </div>
+                                        </div>
                                         <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
@@ -285,19 +308,26 @@
                                         <img class="rounded-circle account-img" src="../static/badge_icons/MESA_Expert.png">
                                         <div class="data">
                                             {% else %}
-                                            <p>{{r}}</p>
-                                            <h4 class="font-weight-bold dark-grey-text">{{p}}</h4>
+                                            <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
+                                            <p>{{ p }}</p>
                                         </div>
                                     </div>
                                     <!--/.Card Data-->
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress">
-                                            <div class="progress-bar bg-primary" role="progressbar" style="width: {{p}}%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress" style="height:20px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
                                         <!--Text-->
-                                        <p class="card-text">Need {{ 100 - p }} Stamps</p>
+                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
+                                        <div class="progress-circle p{{ p }}">
+                                           <span>{{ p }}%</span>
+                                           <div class="left-half-clipper">
+                                              <div class="first50-bar"></div>
+                                              <div class="value-bar"></div>
+                                           </div>
+                                        </div>
                                         {% endif %}
                                         {% endfor %}
                                         <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
@@ -316,6 +346,7 @@
                     </div>
                     <!--/.Panel-->
                 </div>
+                <!-- Main part that different -->
 
                 <!-- Second column -->
 
