--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -21,8 +21,11 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <!-- Bootstrap 4 DatePicker-->  
     <link href="../static/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+    <link href="../static/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"> -->
     <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
+    <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
+    <link href="../static/css/css-circular-prog-bar.css" media="all" rel="stylesheet" type="text/css"/>
 </head>
 
     {% block content %}{% endblock %}
@@ -51,6 +54,18 @@
     <!--Calendar Resize-->
     <script type="text/javascript" src="../static/js/calendar.resize.js"></script>
     <script type="text/javascript" src="../static/js/sideNavInit.js"></script>
+    <script type="text/javascript" src="../static/js/jquery-ui.min.js"></script>
+    {% for f in forms %}
+    <script>
+        $('#{{ "date" + loop.index|string }}').datepicker({
+
+        });
+    </script>
+    {% endfor %}
+    <script type="text/javascript">
+        $(".date-custom").attr("autocomplete", "off");
+    </script>
+
     <!--Custom scripts-->
     </body>
 
