Added all the admin routes

--- a/MESAeveryday/templates/admin_control.html
+++ b/MESAeveryday/templates/admin_control.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<!-- Added by Millen -->
-<!-- Admin View Placeholder -->
+<!-- Admin Control Placeholder -->
 
 <!--Navbar-->
 <ul class="nav navbar-nav nav-flex-icons ml-auto">
@@ -12,8 +11,8 @@
 </ul>
 
 <div class="container-fluid"> 
-    You are now in admin view   
-    <li><a href="{{ url_for('admin_control') }}">Control</a></li>
+    You are now in the admin control page
+    <li><a href="{{ url_for('admin') }}">Dashboard</a></li>
     <li><a href="{{ url_for('admin_settings') }}">Settings</a></li>
 </div>
 
