--- a/MESAeveryday/templates/admin.html
+++ b/MESAeveryday/templates/admin.html
@@ -7,6 +7,8 @@
 <!--Navbar-->
 <ul class="nav navbar-nav nav-flex-icons ml-auto">
     <li class = "nav-item">
+
+        <a class="nav-link" href="{{ url_for('add_school') }}">Add School</a>
         <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
     </li>
 </ul>
