--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -189,35 +189,48 @@
                             <div class="col-xl-12 col-md-6 mb-4">
 
                                 <!--Card-->
-                                <div class="card card-cascade cascading-admin-card">
+                                <div class="card card-cascade cascading-admin-card" style="background-color: #b3cce6">
 
                                     <!--Card Data-->
                                     <div class="admin-up">
-                                        <img class="rounded-circle account-img" src="../static/badge_icons/College_Knowledge.png">
+                                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/College_Knowledge.png">
                                         <div class="data">
                                             {% for r, p in points %}
                                             {% if r == 'College Knowledge' %}
                                             <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
-                                            <p>{{ p }}</p>
                                         </div>
                                     </div>
                                     <!--/.Card Data-->
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress" style="height:20px">
-                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
+                                        <div class="progress" style="height:30px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
-                                        <!--Text-->
-                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
-                                        <div class="progress-circle p{{ p }}">
-                                           <span>{{ p }}%</span>
-                                           <div class="left-half-clipper">
-                                              <div class="first50-bar"></div>
-                                              <div class="value-bar"></div>
-                                           </div>
+                                        <div class="row">
+                                            <div class="col-lg-8">
+                                                <!--Text-->
+                                                <p class="card-text">Total points earned: {{ p }} points</p>
+                                                <p class="card-text">Point until next level: {{ to_next_lv }} points</p>
+                                                <div class="row">
+                                                    <div class="col-lg-5">
+                                                        <button id="button_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</a></button>
+                                                    </div>
+                                                    <div class="col-lg-7">
+                                                        <button id="pbutton_1" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="progress-circle p{{ p }}">
+                                                   <span>Level</span>
+                                                   <div class="left-half-clipper">
+                                                      <div class="first50-bar"></div>
+                                                      <div class="value-bar"></div>
+                                                   </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
                                 </div>
@@ -230,11 +243,11 @@
                             <div class="col-xl-12 col-md-6 mb-6">
 
                                 <!--Card-->
-                                <div class="card card-cascade cascading-admin-card">
+                                <div class="card card-cascade cascading-admin-card" style="background-color: #cccccc">
 
                                     <!--Card Data-->
                                     <div class="admin-up">
-                                        <img class="rounded-circle account-img" src="../static/badge_icons/Career_Pro.png">
+                                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/Career_Pro.png">
                                         <div class="data">
                                             {% elif r == 'Career Pro' %}
                                             <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
@@ -245,19 +258,33 @@
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress" style="height:20px">
-                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
+                                        <div class="progress" style="height:30px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
-                                        <!--Text-->
-                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
-                                        <div class="progress-circle p{{ p }}">
-                                           <span>{{ p }}%</span>
-                                           <div class="left-half-clipper">
-                                              <div class="first50-bar"></div>
-                                              <div class="value-bar"></div>
-                                           </div>
+                                        <div class="row">
+                                            <div class="col-lg-8">
+                                                <!--Text-->
+                                                <p class="card-text">Total points earned: {{ p }} points</p>
+                                                <p class="card-text">Point until next level: {{ to_next_lv }} points</p>
+                                                <div class="row">
+                                                    <div class="col-lg-5">
+                                                        <button id="button_2" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
+                                                    </div>
+                                                    <div class="col-lg-7">
+                                                        <button id="pbutton_2" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="progress-circle p{{ p }}">
+                                                   <span>Level</span>
+                                                   <div class="left-half-clipper">
+                                                      <div class="first50-bar"></div>
+                                                      <div class="value-bar"></div>
+                                                   </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
 
@@ -271,11 +298,11 @@
                             <div class="col-xl-12 col-md-6 mb-4">
 
                                 <!--Card-->
-                                <div class="card card-cascade cascading-admin-card">
+                                <div class="card card-cascade cascading-admin-card" style="background-color: #e6ff99">
 
                                     <!--Card Data-->
                                     <div class="admin-up">
-                                        <img class="rounded-circle account-img" src="../static/badge_icons/Professional_Development.png">
+                                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/Professional_Development.png">
                                         <div class="data">
                                             {% elif r == 'Professional Development' %}
                                             <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
@@ -286,19 +313,33 @@
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress" style="height:20px">
-                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
+                                        <div class="progress" style="height:30px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
-                                        <!--Text-->
-                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
-                                        <div class="progress-circle p{{ p }}">
-                                           <span>{{ p }}%</span>
-                                           <div class="left-half-clipper">
-                                              <div class="first50-bar"></div>
-                                              <div class="value-bar"></div>
-                                           </div>
+                                        <div class="row">
+                                            <div class="col-lg-8">
+                                                <!--Text-->
+                                                <p class="card-text">Total points earned: {{ p }} points</p>
+                                                <p class="card-text">Point until next level: {{ to_next_lv }} points</p>
+                                                <div class="row">
+                                                    <div class="col-lg-5">
+                                                        <button id="button_3" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
+                                                    </div>
+                                                    <div class="col-lg-7">
+                                                        <button id="pbutton_3" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="progress-circle p{{ p }}">
+                                                   <span>Level</span>
+                                                   <div class="left-half-clipper">
+                                                      <div class="first50-bar"></div>
+                                                      <div class="value-bar"></div>
+                                                   </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
 
@@ -312,11 +353,11 @@
                             <div class="col-xl-12 col-md-6 mb-4">
 
                                 <!--Card-->
-                                <div class="card card-cascade cascading-admin-card">
+                                <div class="card card-cascade cascading-admin-card" style="background-color: #ffd699">
 
                                     <!--Card Data-->
                                     <div class="admin-up">
-                                        <img class="rounded-circle account-img" src="../static/badge_icons/MESA_Expert.png">
+                                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/MESA_Expert.png">
                                         <div class="data">
                                             {% else %}
                                             <h4 class="font-weight-bold dark-grey-text">{{ r }}</h4>
@@ -327,31 +368,43 @@
 
                                     <!--Card content-->
                                     <div class="card-body">
-                                        <div class="progress" style="height:20px">
-                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
+                                        <div class="progress" style="height:30px">
+                                            <div class="progress-bar" role="progressbar" style="width: {{ p }}%;height:30px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ p }}%</div>
                                         </div>
-                                        <!--Text-->
-                                        <p class="card-text">Need {{ to_next_lv }} Points</p>
-                                        <div class="progress-circle p{{ p }}">
-                                           <span>{{ p }}%</span>
-                                           <div class="left-half-clipper">
-                                              <div class="first50-bar"></div>
-                                              <div class="value-bar"></div>
-                                           </div>
+                                        <div class="row">
+                                            <div class="col-lg-8">
+                                                <!--Text-->
+                                                <p class="card-text">Total points earned: {{ p }} points</p>
+                                                <p class="card-text">Point until next level: {{ to_next_lv }} points</p>
+                                                <div class="row">
+                                                    <div class="col-lg-5">
+                                                        <button id="button_4" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Earn Stamp</button>
+                                                    </div>
+                                                    <div class="col-lg-7">
+                                                        <button id="pbutton_4" class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">Detailed Progress</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="progress-circle p{{ p }}">
+                                                   <span>Level</span>
+                                                   <div class="left-half-clipper">
+                                                      <div class="first50-bar"></div>
+                                                      <div class="value-bar"></div>
+                                                   </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        {% endif %}
-                                        {% endfor %}
-                                        <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-left">Add More Stamp</button>
                                     </div>
                                     <!--/.Card content-->
+                                    {% endif %}
+                                    {% endfor %}
 
                                 </div>
                                 <!--/.Card-->
 
                             </div>
                             <!--Grid column-->
-
-                            <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full report</button>
 
                         </div>
                     </div>
@@ -437,21 +490,6 @@
             </div>
     </main>
     <!--Main layout-->
-
-    <!--Footer-->
-    <footer class="page-footer pt-0 mt-5 rgba-stylish-light">
-
-        <!--Copyright-->
-        <div class="footer-copyright py-3 text-center">
-            <div class="container-fluid">
-                <a> MESA Office Contact Information </a>
-            </div>
-        </div>
-        <!--/.Copyright-->
-
-    </footer>
-    <!--/.Footer-->
-
 {% endblock content %}
 
 {% block scripts %}
