--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -26,6 +26,11 @@
     <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
     <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
     <link href="../static/css/css-circular-prog-bar.css" media="all" rel="stylesheet" type="text/css"/>
+    <style>
+        body {
+            font-family: Merriweather;
+        }
+    </style>
 </head>
 
     {% block content %}{% endblock %}
@@ -131,6 +136,8 @@
         document.getElementById("pbutton_4").onclick = function () {
         location.href = "/badges/4";
         };
+        $('#upEvent').DataTable();
+        $('#mesaEvent').DataTable();
     </script>
 
     <!--Custom scripts-->
