--- a/MESAeveryday/templates/events.html
+++ b/MESAeveryday/templates/events.html
@@ -17,7 +17,7 @@
 
                     <!--Card Data-->
                     <div class="admin-up">
-                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/{{ badge.picture }}">
+                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/{{ badge.icon.file_name }}">
                         <div class="data">
                             <h3 class="font-weight-bold dark-grey-text">{{ badge.badge_name }}</h3>
                         </div>
