--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -16,7 +16,7 @@
                 <!--Featured image-->
                 <div>
                     <div style="align-items: center;justify-content: center;display: flex;height: 10em">
-                    <img class="rounded-circle account-img" src="../static/badge_icons/{{ picture_file }}">
+                    <img class="rounded-circle account-img" src="../static/badge_icons/{{ badge.icon.file_name }}">
                     </div>
                     <a>
                         <div class="mask rgba-white-slight"></div>
@@ -29,7 +29,7 @@
             <div class="col-lg-7 mb-4">
                 <!--Excerpt-->
                 <a href="" class="teal-text"><h6 class="pb-1"><i class="fa fa-heart"></i><strong> Level {{ lv }} </strong></h6></a>
-                <h4 class="mb-4"><strong>Earned points for Badge {{ badge_name }}</strong></h4>
+                <h4 class="mb-4"><strong>Earned points for Badge {{ badge.badge_name }}</strong></h4>
                 <p>You've earned {{ pt }} points for this badge</p>
                 {% if to_next_lv == 0 %}
                     <p><a><strong>You've achieved the maximum level!</strong></a></p>
@@ -49,7 +49,7 @@
 
 <div class="card mb-4">
     <div class="card-header white-text primary-color">
-        Unearned Stamps For Badge {{ badge_name }}
+        Unearned Stamps For Badge {{ badge.badge_name }}
     </div>
     <div class="card-body">
         <table class="table table-hover mb-0" id="unearnedTable">
@@ -71,7 +71,7 @@
 
 <div class="card mb-4">
     <div class="card-header white-text primary-color">
-        Earned Stamps For Badge {{ badge_name }}
+        Earned Stamps For Badge {{ badge.badge_name }}
     </div>
     <div class="card-body">
         <table class="table table-hover mb-0" id="earnedTable">
@@ -101,7 +101,7 @@
 
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document" >
-    <form  method="POST" action="/badges/{{ badge_id }} ">
+    <form  method="POST" action="/badges/{{ badge.badge_id }} ">
         <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="avatarModalLabel">Delete Stamp</h5>
