added per badge events on /badge pages

--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -94,6 +94,37 @@
                 {% endfor %}
             </tbody>
         </table>
+    <div class='card-body'>
+        Earned Stamps For Badge {{ badge.badge_name }}
+    </div>
+    <div class="card-body">
+        <table class="table table-hover mb-0" id="earnedTable">
+            {% for event in mesa_events[badge.badge_id][:5] %}
+                <tr bgcolor="#7777AA">
+                    <td>
+                        {{ event['summary'] }}
+                        - in {{ event['remain_days'] }} days
+                    </td>
+                </tr>
+                <tr bgcolor="#7777AA">
+                    <td>
+                        {{ event['start_string'] }} 
+                        at {{ event['location'] }}
+                    </td>
+                </tr>
+                <tr bgcolor="#7777AA">
+                    <td>
+                        badge: {{event['badgeColor']}}
+                    </td>
+                </tr>
+                <tr bgcolor="#7777AA">
+                    <td>
+                        <a href={{ event['htmlLink'] }}> Event Link </a>
+                    </td>                                              
+                </tr>                                                
+                <tr><td> -- </td></tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
 
